--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 
   <body>
     <script src="sketch.js"></script>
+    <script src="paddle.js"></script>
+    <script src="puck.js"></script>
   </body>
 </html>
