--- a/Main Menu.html
+++ b/Main Menu.html
@@ -42,8 +42,8 @@
             background: transparent;
             cursor: pointer;
             transition: transform 0.2s;
-            width: 300px; /* Increased from 260px to prevent line break */
-            white-space: nowrap; /* Ensures text stays on one line */
+            width: 300px; 
+            white-space: nowrap; 
         }
         .menu-button:hover {
             transform: scale(1.05);
