--- a/Main Menu.html
+++ b/Main Menu.html
@@ -1,110 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RUMBLE PONG - Home</title>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
-        rel="stylesheet"
-    />
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: "Press Start 2P", cursive;
-            height: 100vh;
-            background: black;
-            color: white;
-            position: relative;
-            overflow: hidden;
-        }
-        .menu-container {
-            text-align: center;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        h1 {
-            font-size: 64px;
-            margin-bottom: 40px;
-            text-shadow: 2px 2px #0051ff;
-        }
-        .menu-button {
-            display: block;
-            margin: 20px auto;
-            font-family: "Press Start 2P", cursive;
-            padding: 12px 24px;
-            font-size: 18px;
-            color: #00ff00;
-            border: 2px solid #00ff00;
-            background: transparent;
-            cursor: pointer;
-            transition: transform 0.2s;
-            width: 300px; 
-            white-space: nowrap; 
-        }
-        .menu-button:hover {
-            transform: scale(1.05);
-            background: rgba(0, 255, 0, 0.1);
-        }
-        .music-button {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            font-family: "Press Start 2P", cursive;
-            padding: 10px 14px;
-            font-size: 10px;
-            color: #ffffff;
-            background: #222;
-            border: 2px solid #ffffff;
-            cursor: pointer;
-        }
-        @media (max-width: 600px) {
-            h1 {
-                font-size: 28px;
-            }
-            .menu-button {
-                font-size: 12px;
-                padding: 10px 18px;
-                width: 200px;
-            }
-            .music-button {
-                font-size: 8px;
-                padding: 6px 10px;
-            }
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RUMBLE PONG - Home</title>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
+
+  <style>
+    body {
+        padding: 0;
+        font-family: "Press Start 2P", cursive;
+        margin: 0;
+        background: black url("bg2.png") no-repeat center center;
+        background-size: cover; 
+        color: rgb(222, 9, 9);
+        position: relative;
+        overflow: hidden;
+        height: 100vh; 
+    }
+
+
+    .menu-container {
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    h1 {
+      font-size: 64px;
+      margin-bottom: 40px;
+      text-shadow: 2px 2px #0051ff;
+    }
+
+    .menu-button {
+      display: block;
+      margin: 20px auto;
+      font-family: "Press Start 2P", cursive;
+      padding: 12px 24px;
+      font-size: 18px;
+      color: #00ff00;
+      border: 2px solid #00ff00;
+      background: transparent;
+      cursor: pointer;
+      transition: transform 0.2s;
+      width: 300px;
+      white-space: nowrap;
+    }
+
+    .menu-button:hover {
+      transform: scale(1.05);
+      background: rgba(0, 255, 0, 0.1);
+    }
+
+    .volume-button {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      width: 90px;
+      height: 90px;
+      cursor: pointer;
+      image-rendering: auto;
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 28px;
+      }
+      .menu-button {
+        font-size: 12px;
+        padding: 10px 18px;
+        width: 200px;
+      }
+      .volume-button {
+        width: 60px;
+        height: 60px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="menu-container">
-        <h1>RUMBLE PONG</h1>
-        <button class="menu-button" onclick="startGame()">▶ Play Game</button>
-        <button class="menu-button" onclick="openSettings()">⚙ Settings</button>
-        <button class="menu-button" onclick="showHowToPlay()">❓ How to Play</button>
-    </div>
-    <button class="music-button" id="music-toggle" onclick="toggleMusic()">🔇 Music Off</button>
-    <audio id="bg-music" src="music.mp3" loop></audio>
-    <script>
-        const music = document.getElementById("bg-music");
-        const toggleBtn = document.getElementById("music-toggle");
-        let isPlaying = false;
 
-        function toggleMusic() {
-            if (!isPlaying) {
-                music.play().catch((err) => console.log("Play blocked:", err));
-                toggleBtn.innerText = "🔈 Music On";
-            } else {
-                music.pause();
-                toggleBtn.innerText = "🔇 Music Off";
-            }
-            isPlaying = !isPlaying;
-        }
+  <div class="menu-container">
+    <h1>RUMBLE PONG</h1>
+    <button class="menu-button" onclick="startGame()">▶ Play Game</button>
+    <button class="menu-button" onclick="openSettings()">⚙ Settings</button>
+    <button class="menu-button" onclick="showHowToPlay()">❓ How to Play</button>
+  </div>
 
-        function startGame() {
-            window.location.href = "pong.html";
-        }
-    </script>
+  <img src="volumeoff.png" id="volumeBtn" class="volume-button" alt="Toggle Volume" />
+
+  <audio id="bg-music" src="music.mp3" loop></audio>
+
+  <script>
+    const music = document.getElementById("bg-music");
+    const volumeBtn = document.getElementById("volumeBtn");
+
+    let isMuted = true;
+
+    window.addEventListener("click", () => {
+      music.play().catch(err => console.log("Play blocked:", err));
+    }, { once: true });
+
+    volumeBtn.addEventListener("click", () => {
+      isMuted = !isMuted;
+      music.muted = isMuted;
+      volumeBtn.src = isMuted ? "volumeoff.png" : "volumeon.png";
+    });
+
+    function startGame() {
+      window.location.href = "pong.html";
+    }
+
+    function openSettings() {
+      alert("Settings menu coming soon!");
+    }
+
+    function showHowToPlay() {
+      alert("Use arrow keys to move the paddle. First to 10 wins!");
+    }
+  </script>
 </body>
 </html>
