--- a/pong.html
+++ b/pong.html
@@ -167,13 +167,13 @@
         this.firstTime = true;
       }
 
-      reset() {
+      reset(xyz) {
         this.x = GAME_WIDTH / 2;
         this.y = GAME_HEIGHT / 2;
         let angle = random(-PI / 4, PI / 4);
         this.xspeed = 5 * cos(angle);
         this.yspeed = 5 * sin(angle);
-        if (random(1) < 0.5) this.xspeed *= -1;
+        if (xyz === 1) this.xspeed *= -1;
         ballSpeedMultiplier = 1; // Reset ball speed
         ballFrozen = false; // Ensure ball is unfrozen on reset
         magicActive = false; // Ensure magic is off on reset
@@ -220,14 +220,14 @@
           if (audioEnabled) {
             goalSound.play(); // Play sound on goal
           }
-          this.reset();
+          this.reset(1);
         }
         if (this.x + this.r < 0) {
           rightscore++;
           if (audioEnabled) {
             goalSound.play(); // Play sound on goal
           }
-          this.reset();
+          this.reset(2);
         }
       }
 
