--- a/pong.html
+++ b/pong.html
@@ -116,6 +116,7 @@
     function preload() {
       // Note: These would be actual image files in a real implementation
       // For now, we'll create placeholder colored rectangles
+      retroFont = loadFont('/data/PressStart2p.ttf');
       powerupImages.freeze = null; // freeze.png
       powerupImages.fireball = null; // fireball.png
       powerupImages.xl = null; // xl.png
@@ -202,7 +203,7 @@
             
             // Update the last angle change time
             this.lastAngleChange = currTime;
-            ballSpeedMultiplier+=2;
+            ballSpeedMultiplier = Math.max(ballSpeedMultiplier, 1.5);
           }
         }
         
@@ -335,14 +336,14 @@
     function draw() {
       scale(scaleFactor);
       background(0);
-
+      textFont(retroFont);
       if (showStartScreen) {
         fill(255);
         textAlign(CENTER);
         textSize(24);
         text("Rumble Pong!", GAME_WIDTH / 2, GAME_HEIGHT / 2 - 50);
         textSize(16);
-        text("Player 1: W/S | Player 2: I/K", GAME_WIDTH / 2, GAME_HEIGHT / 2 + 25);
+        text("Player 1: W/S   |   Player 2: I/K", GAME_WIDTH / 2, GAME_HEIGHT / 2 + 25);
         textSize(12);
         text("Press Q and P for Powerups!", GAME_WIDTH / 2, GAME_HEIGHT / 2 + 50);
         return;
@@ -543,10 +544,10 @@
       fill(255);
       textAlign(LEFT);
       textSize(32);
-      text(leftscore, 20, 40);
+      text(leftscore, 300, 40);
 
       textAlign(RIGHT);
-      text(rightscore, GAME_WIDTH - 20, 40);
+      text(rightscore, GAME_WIDTH - 300, 40);
 
       // Draw powerup icons for each player
       drawPowerupIcon(leftStoredPowerup, 60, 100, 'left');
@@ -606,7 +607,7 @@
         textAlign(CENTER);
         textSize(10);
         text("Ball Frozen: " + seconds + "s", GAME_WIDTH / 2, GAME_HEIGHT - 50);
-      } else if (ballSpeedMultiplier > 1) {
+      } else if (ballSpeedMultiplier > 1 && !magicActive) {
         let timeLeft = ballFrozenEndTime - currentTime; // Re-using for fireball duration
         let seconds = Math.max(0, Math.ceil(timeLeft / 1000));
         textAlign(CENTER);
